--- a/templates/home.html
+++ b/templates/home.html
@@ -43,25 +43,11 @@
 
       <div id="button_area">
         <button class="button_working" @click="fullscreen_toggle"                   >fullscreen [F11]</button>
-        <br>
         <button class="button_working" @click="clear_canvas"                        >blank [spacebar]</button>
-        <br>
         <button class="button_working"  @click="window.location.reload(true)"       >Reload</button>
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <button class="button_in_dev"  @click="canvas_save_image" >save (dev)</button>
+        <button class="button_in_dev"  @click="" >Current Color (dev)</button>
       </div>
 
     <div id="div_right_logs">
