push before presentation

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,6 +17,12 @@
     {% endif %}
   </header>   
 
+  <!-- <hr>
+  <h1>Test Area:</h1>
+  <LazyYoutubeVideo src="https://www.youtube.com/embed/4JS70KB9GS0" autoplay="true" />
+  <h1>Test End</h1> -->
+
+  
   {% if user.is_authenticated %}
     <div id='vue_app'>
       
@@ -113,6 +119,7 @@
       </p>
     </div>
   {% endif %}
+
 
 </main>
 {% endblock %}
