--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@500&display=swap"> 
   
-  <!-- 4. My Main CSS and VUE/Canvas App: -->
+  <!-- 4. Video Player Test -->
+      <!-- Styles without CSS Custom Properties -->
+    <!-- <link rel="stylesheet" href="https://unpkg.com/vue-lazy-youtube-video/dist/style.simplified.css"></link> -->
+      <!-- Minified styles without CSS Custom Properties -->
+      <!-- <link rel="stylesheet" href="https://unpkg.com/vue-lazy-youtube-video/dist/style.simplified.min.css"></link> -->
+    <!-- <script src="https://unpkg.com/vue-lazy-youtube-video"></script> -->
+
+  <!-- 5. My Main CSS and VUE/Canvas App: -->
   <link rel="stylesheet" href="{% static 'css/main.css'%}">
   <script src="{% static 'js/vue_main.js'%}" defer></script>  
 
