--- a/templates/home.html
+++ b/templates/home.html
@@ -109,7 +109,7 @@
       <h1>
         Childhood Canvas
       </h1>
-      <p>
+      <p class="main_text">
         Childhood Canvas is a visual play sandbox for older babies and toddlers, aged 12-36months. 
         Intended for limited-use in a screen-obsessed world, it is evolving into both a keyboard-training application 
         and a personal 'operating system,' where parents can program shortcuts to their toddler's favorite videos. 
