--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,6 @@
     {% endif %}
   </header>   
 
-  <!-- <hr>
-  <h1>Test Area:</h1>
-  <LazyYoutubeVideo src="https://www.youtube.com/embed/4JS70KB9GS0" autoplay="true" />
-  <h1>Test End</h1> -->
 
   
   {% if user.is_authenticated %}
@@ -34,16 +30,10 @@
           <p>Yikes! Your browser cannot display this HTML5 Drawing Canvas: a 1300x900 pixel canvas for toddlers.
             Perhaps try a different, modern browser on the PC in fullscreen.
       </div>
-      <!-- <canvas
-        id='canvas_main' 
-        width = "1300"
-        height = "1100"
-        @mousemove="draw"
-        @mousedown="start_drawing" 
-        @mouseup="stop_drawing"
-        >
-        Fallback: this was the old canvas!
-      </canvas> -->
+      
+      <!-- <div id="konva_test">
+
+      </div> -->
       
       </svg>
 
