--- a/templates/home.html
+++ b/templates/home.html
@@ -79,6 +79,24 @@
         <p class="class_keyboard_logs" id="keyboard_logs"></p>
       </div>
 
+      <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+      <!-- - - - - - - - - - - - - - - - -EXPERIMENTING HERE!  - - - - - - - - - - - - - - - - - - - - - - - -  -->
+      <!-- Trigger/Open The Modal -->
+      <button id="myBtn">Open Modal</button>
+      <!-- <button id="myBtn" @click="konva_test_video">Open Modal</button> -->
+
+      <!-- The Modal -->
+      <div id="myModal" class="modal">
+      
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close">&times;</span>
+          <p>Some text in the Modal..</p>
+        </div>
+      
+      </div> 
+      <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
+
       <footer id="credits">
         <!-- <div id="footer"> -->
           <h1>Credits:</h1>
