--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
     <!-- NEWEST development version, includes helpful console warnings,
     For prototyping or learning purposes, you can use the latest version with:  -->
                                                                                                                               <!-- VUE: DIS-ABLE FOR PRODUCTION!   -->
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script> -->
+    <script src="https://unpkg.com/vue@2.6.12/dist/vue.js"></script>
     
     <!-- or: -->
     <!-- For production, we recommend linking to a specific version number and build
@@ -32,7 +34,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Advent+Pro:wght@500&display=swap"> 
   
   <!-- 4. Video Player Test -->
-    <script src="https://unpkg.com/vue-youtube-embed@2.2.2/lib/vue-youtube-embed.js"></script>
+    <!-- <script src="https://unpkg.com/vue-youtube-embed@2.2.2/lib/vue-youtube-embed.js"></script> -->
 
 
   <!-- 5. My Main CSS and VUE/Canvas App: -->
