--- a/templates/home.html
+++ b/templates/home.html
@@ -31,12 +31,6 @@
           <p>Yikes! Your browser cannot display this HTML5 Drawing Canvas: a 1300x900 pixel canvas for toddlers.
             Perhaps try a different, modern browser on the PC in fullscreen.
       </div>
-      
-      <!-- <div id="konva_test">
-
-      </div> -->
-      
-      </svg>
 
       <div id="button_area">
         <button class="button_working" @click="fullscreen_toggle"                   >fullscreen [F11]</button>
@@ -92,89 +86,30 @@
         </footer>
       </div>
 
-      <div id="all_modals"  v-if="showModal1" @close="showModal1 = false">
+      <div id="all_modals">
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
         <!-- - - - - - - - - - - - - - - - -EXPERIMENTING HERE!  - - - - - - - - - - - - - - - - - - - - - - - -  -->
-
         <!-- Modal1, component test from https://vuejs.org/v2/examples/modal.html -->
 
           <!-- https://vuejs.org/v2/examples/modal.html -->
           <!-- template for the modal component -->
-            <script type="text/x-template" id="modal-template">
-              <transition name="modal">
-                <div class="modal-mask">
-                  <div class="modal-wrapper">
-                    <div class="modal-container">
-
-                      <div class="modal-header">
-                        <slot name="header">
-                          default header
-                        </slot>
-                      </div>
-
-                      <div class="modal-body">
-                        <slot name="body">
-                          default body
-                        </slot>
-                      </div>
-
-                      <div class="modal-footer">
-                        <slot name="footer">
-                          default footer
-                          <button class="modal-default-button" @click="$emit('close')">
-                            OK
-                          </button>
-                        </slot>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </transition>
-            </script>
+            <!-- <script type="text/x-template" id="modal-template"> -->
+            <!-- </script> -->
           <!-- END template for the modal component -->
           
-        <div v-if="showModal1" @close="showModal1 = false">
-            <span class="close">&times;</span>
-          <iframe
-          width="560" 
-          height="315" 
-          src="https://www.youtube.com/embed/zRxX63txOXk" 
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-          ></iframe>
+            <button id="show-modal" @click="showModal1 = true">Show Modal</button>
 
-        </div>
-
-        <!-- The Modal, working other test -->
-        <!-- <div id="myModal" class="modal">         -->
-          <!-- Modal content -->
-          <!-- <div class="modal-content">
-            <span class="close">&times;</span>
-            <p>Some text in the Modal..</p> -->
-            <!-- 
-            Removed this from <iframe> : 
-              src = video_URL_string
-              id="video_1"
-              NOTE:
-                Each URL needs the suffix "?autoplay=1" to autoplay
-            -->
-            <!-- <iframe
-            width="560" 
-            height="315" 
-            src="https://www.youtube.com/embed/zRxX63txOXk" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-            ></iframe>
-          </div>        
-        </div> -->
-
+            <!-- use the modal component, pass in the prop -->
+            <modal v-if="showModal1" @close="showModal1=false" src_url="https://www.youtube.com/embed/zRxX63txOXk">
+              <!-- you can use custom content here to overwrite default content -->
+              <h3 slot="header">custom header</h3>
+                <span class="close">&times;</span>
+            </modal>
       </div>
       <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
-
       <!-- END VUE APP! NOTHING OUTSIDE OF THIS DIV! -->
     </div>
+
   {% else %}
     <div>
       <h1>
