--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,29 +66,6 @@ a {
 
 
 /* - - - - - - - - - - - - - - - - - - - - - START MODAL EXPERIMENTS - - - - - - - - - - - - - -  */
-/* https://www.w3schools.com/howto/howto_css_modals.asp */
- /* The Modal (background) */
- .modal {
-    display: block; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.6); /* Black w/ opacity */
-  }  
-  /* Modal Content/Box */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 93%; /* Could be more or less, depending on screen size */
-    color: red;
-  }  
   /* The 'X' Close Button */
   .close {
     color: black;
@@ -103,9 +80,9 @@ a {
     cursor: pointer;
   }
 
-
-/* - - - - - - - - - - - - - - - - - - - - - SECOND SET OF MODAL EXPERIMENTS - - - - - - - - - - - - - -  */
 /* FROM https://vuejs.org/v2/examples/modal.html */
+/* also see https://www.w3schools.com/howto/howto_css_modals.asp */
+/* - - - - - - - - - - - - - - - - - - - - - SECOND SET OF MODAL EXPERIMENTS - - - - - - - - - - - - - -  */
 .modal-mask {
     position: fixed;
     z-index: 9998;
@@ -125,7 +102,7 @@ a {
 
 .modal-container {
     /* width: 300px; */
-    width: 90%;
+    width: 50%;
     margin: 0px auto;
     padding: 20px 30px;
     background-color: grey;
