--- a/static/css/main.css
+++ b/static/css/main.css
@@ -55,7 +55,7 @@ a {
     margin: 1%;
 }
 #div_konva_canvas {  /* MAIN CANVAS HERE */
-    background-color: rgb(146, 0, 146);
+    background-color: rgb(0, 194, 184);
     width: 1300px;
     height: 1100px;
     margin: 1%;
@@ -79,10 +79,6 @@ a {
     text-decoration: none;
     cursor: pointer;
   }
-
-/* FROM https://vuejs.org/v2/examples/modal.html */
-/* also see https://www.w3schools.com/howto/howto_css_modals.asp */
-/* - - - - - - - - - - - - - - - - - - - - - SECOND SET OF MODAL EXPERIMENTS - - - - - - - - - - - - - -  */
 .modal-mask {
     position: fixed;
     z-index: 9998;
@@ -133,7 +129,6 @@ a {
 * You can easily play with the modal transition by editing
 * these styles.
 */
-
 .modal-enter {
     opacity: 0;
 }
@@ -150,7 +145,42 @@ a {
 /* - - - - - - - - - - - - - - - - - - - - -  END MODAL EXPERIMENTS - - - - - - - - - - - - - -  */
 
 
-
+/* - - - - - - - - - - - - - - - - - - - - -  SLIDER FOR TREE REDRAW - - - - - - - - - - - - - -  */
+/* thanks to https://www.w3schools.com/howto/howto_js_rangeslider.asp */
+.slidecontainer {
+    width: 100%;
+  }  
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+.slider:hover {
+    opacity: 1;
+}
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+/* - - - - - - - - - - - - - - - - - - - - -  END SLIDER FOR TREE REDRAW - - - - - - - - - - - - - -  */
 
 /* 2. BUTTONS IN MIDDLE: */
 /* https://www.w3schools.com/csS/css3_buttons.asp */
