--- a/templates/canvas.html
+++ b/templates/canvas.html
@@ -79,7 +79,7 @@
                 <h1 id="mouse_position"> Mouse: {{ x }}, {{ y }} </h1> 
               -->
           {% endverbatim %}
-            <p id="last_keypress">Keyboard: 
+            <p id="last_keypress">Key: 
             </p>
         </div>
 
